<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_editText"
    android:paddingRight="@dimen/padding_editText"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_name"
        android:text="@string/name_x"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_editText"
        android:layout_marginTop="@dimen/magin_top"
        android:ems="10"
        android:hint="@string/hint_x"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_x"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_name"
        android:text="@string/name_y"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_x" />

    <EditText
        android:id="@+id/edit_y"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_editText"
        android:layout_marginTop="@dimen/magin_top"
        android:ems="10"
        android:hint="@string/hint_y"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_y"
        app:layout_constraintTop_toBottomOf="@+id/edit_x" />

    <TextView
        android:id="@+id/text_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_name"
        android:text="@string/name_z"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_y" />

    <EditText
        android:id="@+id/edit_z"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_editText"
        android:layout_marginTop="@dimen/magin_top"
        android:ems="10"
        android:hint="@string/hint_z"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_z"
        app:layout_constraintTop_toBottomOf="@+id/edit_y" />

</androidx.constraintlayout.widget.ConstraintLayout>